--- a/src/app/web-app/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/exp/exp-inner/exp-inner.component.html
@@ -3,7 +3,7 @@
     <li class="breadcrumb-item active align-self-center" aria-current="page">English</li>
     <span class="ml-auto">
       <div class="curs-ptr" (click)="toggleView()">
-        <i [ngClass]="{'fa': true, 'fa-list-ul' : view, 'fa-th-large': !view}" style="font-size:1.75rem;"></i>
+        <i class="fa" [ngClass]="{'fa-list-ul' : view, 'fa-th-large': !view}" style="font-size:1.75rem;"></i>
       </div>
     </span>
   </ol>
