--- a/src/app/home-layout/sidebar/sidebar.component.html
+++ b/src/app/home-layout/sidebar/sidebar.component.html
@@ -6,8 +6,7 @@
         <div class="link-text align-middle">{{item.title}}</div>
       </a>
       <div *ngIf="!item.url" class="dropright py-2" [routerLinkActive]="['active']">
-        <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
+        <a class="nav-item text-hi-dark dropdown-toggle p-2 pl-3" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="link-icon pr-3 align-middle w-100"><i class="fas fa-layer-group"></i></div>
           <div class="link-text align-middle">{{item.title}}</div>
         </a>
