--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="row mt-4 mx-0">
-    <div [ngClass]="{'sub-tab-nav': true, 'col-md-12': !showDoc && !showWork, 'col-md-6': showDoc || showWork}">
+    <div class="sub-tab-nav" [ngClass]="{'col-md-12': !showDoc && !showWork, 'col-md-6': showDoc || showWork}">
       <div class="card overflow-hidden">
         <div class="card-header border-0">
           <mat-tab-group>
