--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
   <div class="row mt-4 mx-0">
-    <div class="sub-tab-nav" [ngClass]="{'col-md-12' : !showDoc, 'col-md-8': showDoc}">
+    <div class="sub-tab-nav" [ngClass]="{'col-md-12': !showDoc, 'col-md-8': showDoc}">
       <div class="card overflow-hidden">
         <div class="card-body bg-white px-0 pb-0">
           <h5 class="card-title px-3">
@@ -42,10 +42,8 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Division
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown
-                    aria-labelledby="divisionTrigger">
-                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3"
-                      [floatLabel]="'never'">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown aria-labelledby="divisionTrigger">
+                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
                       <i matPrefix class="fas fa-search"></i>
                       <input matInput placeholder="Search ...">
                     </mat-form-field>
@@ -69,8 +67,7 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Experience
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown
-                    aria-labelledby="divisionTrigger">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown aria-labelledby="divisionTrigger">
                     <div class="input-group mb-2 p-2">
                       <div class="input-group-prepend">
                         <span class="input-group-text bg-white">
@@ -99,7 +96,7 @@
             </div>
           </h5>
           <div class="card-text px-3">
-            <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showDoc}">
+            <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showDoc}">
               <thead>
                 <tr>
                   <th scope="col" class="curs-ptr">
@@ -140,8 +137,7 @@
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-                    class="fas fa-chevron-left"></i></a>
+                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
               </li>
               <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
               </li>
@@ -155,7 +151,7 @@
         </div>
       </div>
     </div>
-    <div [ngClass]="{'workspace w-100 col-md-4': true,'hide' : !showDoc, 'show': showDoc}">
+    <div class="workspace w-100 col-md-4" [ngClass]="{'hide': !showDoc, 'show': showDoc}">
       <app-loader [type]="'page'" *ngIf="docLoading"></app-loader> <!-- loader -->
 
       <div class="doc" *ngIf="grpDetail && !docLoading">
