--- a/src/app/user/import/import.component.html
+++ b/src/app/user/import/import.component.html
@@ -28,15 +28,12 @@
         </div>
       </div>
     </div>
-
     <div class="mt-3">
       <mat-label>Settings</mat-label>
       <mat-checkbox class="d-block ml-3">Send a notification mail with the login credentials to all users for whom a
-        password
-        is specified.
+        password is specified.
       </mat-checkbox>
     </div>
-
     <div class="mt-5">
       <button class="btn btn-secondary" [routerLink]="'/user'">Cancel</button>
       <div class="float-right">
