--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="row mt-4 mx-0">
-    <div [ngClass]="{'sub-tab-nav': true,'col-md-12' : !showDoc, 'col-md-8': showDoc}">
+    <div class="sub-tab-nav" [ngClass]="{'col-md-12' : !showDoc, 'col-md-8': showDoc}">
       <div class="card overflow-hidden">
         <div class="card-header border-0">
           <mat-tab-group>
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-    <div [ngClass]="{'workspace w-100 col-md-4': true,'hide' : !showDoc, 'show': showDoc}">
+    <div class="workspace w-100 col-md-4" [ngClass]="{'hide': !showDoc, 'show': showDoc}">
       <div class="doc">
         <div class="card">
           <div class="card-header row m-0">
