--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -52,15 +52,15 @@
         <li class="nav-item align-self-center dropdown ml-4 user">
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="userDropdown" role="button"
             data-toggle="dropdown" aria-expanded="false">
-            <img src="assets/images/avatar.png"><span class="align-middle">
-              User Name</span>
+            <img src="assets/images/avatar.png">
+              <span class="align-middle">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</span>
           </a>
           <div class="dropdown-menu large-dropdown dropdown-menu-right" aria-labelledby="userDropdown">
             <h6 class="dropdown-item row m-0 p-2 mt-2 no-bg-hover text-dark">
               <div class="col-3"><img src="assets/images/avatar.png" class="w-100"></div>
               <div class="col-9 align-self-center row">
                 <div>
-                  <div class="username">User Name</div>
+                  <div class="username">{{userInfo && userInfo.fN?userInfo.fN:'User'}}</div>
                   <div class="position text-hi-grey"><small>Manager</small></div>
                 </div>
                 <div class="ml-auto align-self-center">
@@ -71,10 +71,9 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item"><i class="fas fa-user mr-2"></i>My Profile</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-briefcase mr-2"></i>Switch to web
-              app</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="logout();">
+              <i class="fas fa-sign-out-alt mr-2"></i>Logout
+            </a>
           </div>
         </li>
       </ul>
