--- a/src/styles.scss
+++ b/src/styles.scss
@@ -680,6 +680,7 @@ header {
         }
 
         table {
+
           @media (max-width:600px) {
             font-size: 10px;
           }
@@ -691,10 +692,10 @@ header {
 
 .hide-rows {
 
-  tr>*:nth-child(2),
-  tr>*:nth-child(3),
-  tr>*:nth-child(4),
-  tr>*:nth-child(5) {
+  // tr>*:nth-child(2),
+  // tr>*:nth-child(3),
+  // tr>*:nth-child(4),
+  tr>*:not(:nth-child(1)) {
     display: none;
   }
 }
