--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -131,7 +131,7 @@
             <div class="pages">
               <mat-form-field appearance="outline" class="mr-2">
                 <mat-select [(ngModel)]="pageSize" (selectionChange)="pageSizeChange()">
-                  <mat-option [value]="size" *ngFor="let size of pageSizeArr">{{size}}</mat-option>
+                  <mat-option [value]="lP" *ngFor="let lP of lmtPage">{{lP}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <!-- <span>Showing 1-10 of {{numAllTags}}</span> -->
