--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -264,7 +264,7 @@
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
         <input matInput type="text" placeholder="Name" formControlName="name" required>
-        <mat-error *ngIf="catgForm.get('name')!.hasError('required')">
+        <mat-error *ngIf="updTagForm.get('name')!.hasError('required')">
           Name is required
         </mat-error>
       </mat-form-field>
